GPv3: Keyframes deleted on move and then crash #118509

Closed
opened 2024-02-20 14:35:13 +01:00 by Lukas Tönne · 5 comments
Member

System Information
Operating system:
Graphics card:

Blender Version
Broken: 4.2

Short description of error
Moving keyframes for Grease Pencil 3 objects deletes some of them and crashes.

Exact steps for others to reproduce the error

  1. Add some GP3 keyframes (only visible in dope sheet atm)
  2. Select all keyframes and move them around. Some keyframes get deleted this way.
  3. Repeat moving keyframes until it crashes (somewhat random)

All keyframes:
image
After moving some get deleted:
image

**System Information** Operating system: Graphics card: **Blender Version** Broken: 4.2 **Short description of error** Moving keyframes for Grease Pencil 3 objects deletes some of them and crashes. **Exact steps for others to reproduce the error** 1. Add some GP3 keyframes (only visible in dope sheet atm) 2. Select all keyframes and move them around. Some keyframes get deleted this way. 3. Repeat moving keyframes until it crashes (somewhat random) All keyframes: ![image](/attachments/227882dd-f87c-48b8-89e3-2ff92a967846) After moving some get deleted: ![image](/attachments/2ab60377-2b3b-4c74-a3b4-959366719bb4)
Lukas Tönne added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2024-02-20 14:35:14 +01:00
Lukas Tönne added this to the Grease Pencil project 2024-02-20 14:35:21 +01:00
Member

Yes, can confirm the crash. cc @filedescriptor

Yes, can confirm the crash. cc @filedescriptor
Member

#118334 looks related from function calls

#118334 looks related from function calls
Author
Member

Not quite the same issue as #118334 i think. In this case the root cause seems to be the GreasePencil::move_duplicate_frames function.

Not quite the same issue as #118334 i think. In this case the root cause seems to be the `GreasePencil::move_duplicate_frames` function.
Author
Member

There seem to be two distinct issues here:

  1. Transform code for grease pencil keyframes handles selected keys one-by-one and does an implicit de-duplication after each keyframe. Example: list of keys [1,2,3,4] gets moved 1 to the right, should be [-,1,2,3]. But each moved key overwrites the previous value before it can be moved in turn: [1,2,3,4] -> [-,1,3,4] -> [-,-,1,4] -> [-,-,-,1]. This needs general fixes to the transform code, it shouldn't throw away information about keys before everything is transformed.

  2. After moving keys the layer needs to be tagged with tag_frames_map_keys_changed but is only getting tag_frames_map_changed currently. This means the frames map gets updated, but the sorted_keys list is not. After transforming the sorted_keys list is longer than the actual frames map, which crashes soon.

There seem to be two distinct issues here: 1. Transform code for grease pencil keyframes handles selected keys one-by-one and does an implicit de-duplication after each keyframe. Example: list of keys `[1,2,3,4]` gets moved 1 to the right, should be `[-,1,2,3]`. But each moved key overwrites the previous value before it can be moved in turn: `[1,2,3,4]` -> `[-,1,3,4]` -> `[-,-,1,4]` -> `[-,-,-,1]`. This needs general fixes to the transform code, it shouldn't throw away information about keys before everything is transformed. 2. After moving keys the layer needs to be tagged with `tag_frames_map_keys_changed` but is only getting `tag_frames_map_changed` currently. This means the frames map gets updated, but the `sorted_keys` list is not. After transforming the `sorted_keys` list is longer than the actual frames map, which crashes soon.
Author
Member

The root cause here is the layer API for adding/removing frames. This must be considered an "internal" API because any calls here require manually fixing the user count of drawings. Such user count fixes need access to the GreasePencil object data, it cannot be done using the GreasePencilLayer alone. Transform code for Grease Pencil only stores the layer, but not the GreasePencil ID itself, so it can't ensure valid drawing user counts during the transform.

The root cause here is the layer API for adding/removing frames. This must be considered an "internal" API because any calls here require manually fixing the user count of drawings. Such user count fixes need access to the `GreasePencil` object data, it cannot be done using the `GreasePencilLayer` alone. Transform code for Grease Pencil only stores the layer, but not the `GreasePencil` ID itself, so it can't ensure valid drawing user counts during the transform.
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-03-11 12:50:33 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#118509
No description provided.